--- a/style.css
+++ b/style.css
@@ -46,9 +46,12 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow: hidden;
 }
 
 .carousel-item img {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -76,4 +79,17 @@
     background-color: rgb(228, 228, 228);
     font-weight: bold;
     border-top: 2px solid black;
+}
+
+@media (max-width: 768px) {
+    
+.carousel-item {
+    width: 100%;
+    height: 200px;
+}
+
+    .carousel-item img {
+        max-height: 200px;
+        height: 100%;
+    }
 }
